--- a/styles/work2.css
+++ b/styles/work2.css
@@ -1,19 +1,12 @@
 .div1 {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
+  display: baseline;
+  width: 350px;
 }
 
 .profile-pic {
-  width: 200px;
-  display: inline;
-  align-items: center;
-  margin-bottom: 20px;
+  width: 110px;
+  height:150px;
+  float: left;
+  margin-right: 15px;
 }
 
-.words {
-  display: inline; 
-  width: 300px;
-}
