--- a/styles/work6.css
+++ b/styles/work6.css
@@ -44,4 +44,9 @@ body {
   padding-top: 7px;
   padding-bottom: 7px;
   margin-bottom: 15px;
+  cursor: pointer;
+}
+
+.button:active {
+  opacity: 0.7;
 }
