--- a/styles/work8.css
+++ b/styles/work8.css
@@ -1,3 +1,43 @@
 body {
   font-family: 'Kumbh Sans', sans-serif;
+  padding-top:56px;
+  margin: 0;
 }
+
+main {
+  text-align: center;
+  margin-bottom: 100px;
+}
+h1 {
+  font-size: 42px;
+  font-weight: lighter;
+  margin-top: 100px;
+  margin-bottom: 35px;
+}
+
+.slogan {
+  font-size: 14px;
+  margin-bottom: 35px;
+}
+
+.our-store-button {
+  color: white;
+  background-color: rgb(250, 168, 159);
+  font-size: 14px;
+  border: none;
+  border-radius: 2px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 17px;
+  padding-bottom: 17px;
+}
+  
+.furniture-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 15px;
+}
+
+
+
+
