--- a/styles/work8header.css
+++ b/styles/work8header.css
@@ -1,76 +1,44 @@
-.header {
+.navbar {
   height: 55px;
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  position: fixed;
-  top: 0;
+  position: sticky;
   left: 0;
   right: 0;
   background-color: white;
-  border-bottom: solid;
-  border-bottom-width: 1px;
-  border-bottom-color: rgb(228, 228, 228);
-  float: left;
+  width: 100%;
 }
 
-.left-section {
+.navbar-left{
   display: flex;
   align-items: center;
 }
 
-.back-arrow {
-  height: 15px;
-  margin-left: 55px;
-  margin-right: 10px;
-}
-
-.all-templates {
-  font-size: 12px;
-  margin-right: 30px;
+.fips {
   font-weight: bold;
+  font-size: 27px;
+  margin-left: 320px;
 }
 
-.computer, .tablet, .mobile {
-  height: 15px;
-  margin-right: 7px;
-}
-
-.right-section {
+.navbar-right {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-right: 55px;
-}
-
-.checkmark {
-  height: 12px;
-  margin-right: 5px;
-}
-
-.no-credit-card {
-  font-size: 9px;
-  margin-right: 15px;
-}
-
-.start-building-button {
-  border: none;
-  border-radius: 20px;
-  background-color: rgb(92, 16, 192);
-  color: white;
-  font-size: 7px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-}
-
-
-
-.navbar-options ul li {
+  margin-right: 290px;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
 }
+
+li {
+  float: right;
+  font-weight: bold;
+  margin-right: 35px;
+}
+
+
+.shopping-bag {
+  height: 18px;
+  padding-right: 5px;
+}
+
 
