--- a/styles/work8.css
+++ b/styles/work8.css
@@ -1,13 +1,17 @@
 body {
   font-family: 'Kumbh Sans', sans-serif;
-  padding-top:56px;
   margin: 0;
 }
 
 main {
+  width: 100%;
+}
+
+section {
   text-align: center;
   margin-bottom: 100px;
 }
+
 h1 {
   font-size: 42px;
   font-weight: lighter;
@@ -34,8 +38,15 @@ h1 {
   
 .furniture-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 15px;
+  grid-template-columns: 300px 300px 300px;
+  column-gap: 20px;
+}
+
+.aesthetic-image {
+  display: grid;
+  height: 400px;
+  width: 100%;
+  place-items: center;
 }
 
 
