--- a/styles/work8header.css
+++ b/styles/work8header.css
@@ -8,6 +8,7 @@
   right: 0;
   background-color: white;
   width: 100%;
+  margin-top: 0;
 }
 
 .navbar-left{
@@ -18,15 +19,19 @@
 .fips {
   font-weight: bold;
   font-size: 27px;
-  margin-left: 320px;
+  padding-left: 320px;
 }
 
 .navbar-right {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-right: 290px;
   list-style-type: none;
+  padding-right: 200px;
+}
+
+ul {
+  
 }
 
 li {
