--- a/styles/work8.css
+++ b/styles/work8.css
@@ -1,10 +1,13 @@
 body {
   font-family: 'Kumbh Sans', sans-serif;
-  margin: 0;
+  margin: 0; 
 }
 
 main {
-  width: 100%;
+  width: 1900px;
+  align-items: center;
+  text-align: center;
+  background-color: brown;
 }
 
 section {
@@ -38,15 +41,27 @@ h1 {
   
 .furniture-grid {
   display: grid;
-  grid-template-columns: 300px 300px 300px;
+  grid-template-areas: left center right;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 450px;
   column-gap: 20px;
+  width: 940px;
+  margin-left: 475px;
+  background-color: aqua;
 }
 
 .aesthetic-image {
-  display: grid;
-  height: 400px;
-  width: 100%;
-  place-items: center;
+  display: block;
+  height: 375px;
+  width: 300px;
+}
+
+.chairs {
+  margin-top: 75px;
+}
+
+.flowers {
+  align-self: start;
 }
 
 
