--- a/styles/work8.css
+++ b/styles/work8.css
@@ -1,10 +1,11 @@
 body {
   font-family: 'Kumbh Sans', sans-serif;
   margin: 0; 
+  width: 100%;
 }
 
 main {
-  width: 1900px;
+  
   align-items: center;
   text-align: center;
   background-color: brown;
@@ -13,40 +14,48 @@ main {
 section {
   text-align: center;
   margin-bottom: 100px;
+  background-color: green;
 }
 
 h1 {
-  font-size: 42px;
+  font-size: 35px;
   font-weight: lighter;
   margin-top: 100px;
   margin-bottom: 35px;
 }
 
-.slogan {
-  font-size: 14px;
+.small-text {
+  font-size: 12px;
+}
+
+.spacing {
   margin-bottom: 35px;
 }
 
-.our-store-button {
+.buttons {
   color: white;
-  background-color: rgb(250, 168, 159);
+  background-color: rgb(179, 149, 147);
   font-size: 14px;
   border: none;
-  border-radius: 2px;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 17px;
-  padding-bottom: 17px;
+  border-radius: 3px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
-  
-.furniture-grid {
+
+.grid-display{
   display: grid;
+  width: 940px;
+  margin-left: 475px;
+}
+
+
+.furniture-grid {
   grid-template-areas: left center right;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 450px;
   column-gap: 20px;
-  width: 940px;
-  margin-left: 475px;
   background-color: aqua;
 }
 
@@ -64,6 +73,80 @@ h1 {
   align-self: start;
 }
 
+.two-col {
+  grid-template-areas: left right;
+  grid-template-columns: 1fr 1fr;
+}
+
+.who-we-are-grid {
+  grid-template-rows: 200px;
+  background-color: aqua;
+}
+
+.info {
+  text-align: left;
+  padding-left: 90px;
+}
+
+.quotes {
+  font-size: 40px;
+  margin-top: 0;
+}
+
+.credo {
+  margin-bottom: 15px;
+}
+
+.about-us {
+  padding-right: 70px;
+  padding-top: 40px;
+}
+
+.credo-grid {
+  grid-template-rows: 588px;
+  background-color: aqua;
+}
+
+.plant-on-desk {
+  width: 100%;
+}
+
+.ig-pics-row {
+  align-items: center;
+}
+
+.ig-pic {
+  height: 200px;
+  width: 200px;
+  margin-right: 5px;
+}
+
+.question-margin {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.contact-form {
+  text-align: left;
+  font-size: 13px;
+}
+
+.box-design {
+  font-family: 'kumbh sans';
+  background-color: rgb(218, 212, 206);
+  width: 80%;
+  margin-bottom: 20px;
+}
+
+.input-box {
+  height: 30px;
+  border: none;
+  padding-left: 10px;
+}
+
+.flower-footer {
+  width: 100%;
+}
 
 
 
