--- a/styles/work8header.css
+++ b/styles/work8header.css
@@ -11,33 +11,36 @@
   margin-top: 0;
 }
 
+.alignment-nav {
+  align-items: center;
+}
+
 .navbar-left{
   display: flex;
-  align-items: center;
 }
 
 .fips {
   font-weight: bold;
-  font-size: 27px;
-  padding-left: 320px;
+  font-size: 20px;
+  padding-left: 150px;
 }
 
 .navbar-right {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   list-style-type: none;
-  padding-right: 200px;
+  padding-right: 10px;
 }
 
 ul {
-  
+  list-style-type: none;
 }
 
 li {
-  float: right;
+  float: left;
   font-weight: bold;
   margin-right: 35px;
+  font-size: 15px;
 }
 
 
