Working on work 8 section 1
completed header, need to fix font sizing on next sections and work on aligning pictures

--- a/styles/work8footer.css
+++ b/styles/work8footer.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   height: 300px;
   display: flex;
   flex-direction: row;
@@ -56,4 +56,4 @@
 
 .sub-but {
   margin-top: 0;
-}
+} */
