--- a/styles/work8.css
+++ b/styles/work8.css
@@ -1,12 +1,34 @@
 body {
   font-family: 'Kumbh Sans', sans-serif;
   margin: 0; 
-  width: 100%;
   top: 0;
   bottom: 0;
 }
 
-main {
+.center {
+  align-items: center;
+  text-align: ;
+  width: 1024px;
+  margin: auto;
+}
+
+h3 {
+  font-size: 48px;
+}
+
+.buttons {
+  color: white;
+  background-color: rgb(179, 149, 147);
+  font-size: 14px;
+  border: none;
+  border-radius: 3px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+/* main {
   align-items: center;
   text-align: center;
 }
@@ -144,6 +166,4 @@ h1 {
 .flower-footer {
   width: 100%;
 }
-
-
-
+ */
