--- a/styles/work8header.css
+++ b/styles/work8header.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   height: 55px;
   display: flex;
   flex-direction: row;
@@ -48,7 +48,56 @@ li {
   height: 18px;
   padding-right: 5px;
 }
+ */
 
+.header-alignment {
+display: flex;
+align-items: center;
+}
 
+.header {
+flex-direction: row;
+position: sticky;
+margin-top: 0;
+width: 100%;
+height: 79px;
+border: none;
+}
 
+.bottom-border {
+bottom: 1px;
+box-shadow: 0px 0px 8px 2px ;
+color: rgb(220, 210, 226);
+}
 
+.navbar {
+justify-content: space-between;
+width: 1240px;
+margin-left: 330px;
+margin-right: 330px;
+font-weight: 700;
+padding-top: 24px;
+padding-bottom: 24px;
+padding-left: 16px;
+padding-right: 16px;
+color: black;
+font-family: 'Lato', sans-serif;
+}
+
+.fips {
+font-size: 29px;
+font-weight: bold;
+}
+
+.content {
+font-size: 16px;
+text-align: right;
+margin-left: 48px;
+width: fit-content;
+}
+
+#shopping-bag {
+height: 20px;
+padding-right: 5px;
+
+}
