--- a/styles/work8header.css
+++ b/styles/work8header.css
@@ -1,103 +1,103 @@
-/* .navbar {
-  height: 55px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  position: sticky;
-  left: 0;
-  right: 0;
-  background-color: white;
-  width: 100%;
-  margin-top: 0;
+/* /* .navbar {
+height: 55px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+position: sticky;
+left: 0;
+right: 0;
+background-color: white;
+width: 100%;
+margin-top: 0;
 }
 
 .alignment-nav {
-  align-items: center;
+align-items: center;
 }
 
 .navbar-left{
-  display: flex;
+display: flex;
 }
 
 .fips {
-  font-weight: bold;
-  font-size: 20px;
-  padding-left: 150px;
+font-weight: bold;
+font-size: 20px;
+padding-left: 150px;
 }
 
 .navbar-right {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  padding-right: 10px;
+display: flex;
+justify-content: space-between;
+list-style-type: none;
+padding-right: 10px;
 }
 
 ul {
-  list-style-type: none;
+list-style-type: none;
 }
 
 li {
-  float: left;
-  font-weight: bold;
-  margin-right: 35px;
-  font-size: 15px;
+float: left;
+font-weight: bold;
+margin-right: 35px;
+font-size: 15px;
 }
 
 
 .shopping-bag {
-  height: 18px;
-  padding-right: 5px;
+height: 18px;
+padding-right: 5px;
 }
- */
+*/
 
 .header-alignment {
-display: flex;
-align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .header {
-flex-direction: row;
-position: sticky;
-margin-top: 0;
-width: 100%;
-height: 79px;
-border: none;
+  flex-direction: row;
+  position: sticky;
+  margin-top: 0;
+  width: 100%;
+  height: 79px;
+  border: none;
 }
 
 .bottom-border {
-bottom: 1px;
-box-shadow: 0px 0px 8px 2px ;
-color: rgb(220, 210, 226);
+  bottom: 1px;
+  box-shadow: 0px 0px 8px 2px ;
+  color: rgb(220, 210, 226);
 }
 
 .navbar {
-justify-content: space-between;
-width: 1240px;
-margin-left: 330px;
-margin-right: 330px;
-font-weight: 700;
-padding-top: 24px;
-padding-bottom: 24px;
-padding-left: 16px;
-padding-right: 16px;
-color: black;
-font-family: 'Lato', sans-serif;
+  display: flex;
+  justify-content: space-between;
+  width: 1240px;
+  margin-left: 330px;
+  margin-right: 330px;
+  font-weight: 700;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  padding-left: 16px;
+  padding-right: 16px;
+  color: black;
+  font-family: 'Lato', sans-serif;
 }
 
 .fips {
-font-size: 29px;
-font-weight: bold;
+  font-size: 29px;
+  font-weight: bold;
 }
 
 .content {
-font-size: 16px;
-text-align: right;
-margin-left: 48px;
-width: fit-content;
+  font-size: 16px;
+  text-align: right;
+  margin-left: 48px;
+  width: fit-content;
 }
 
 #shopping-bag {
-height: 20px;
-padding-right: 5px;
-
-}
+  height: 20px;
+  padding-right: 5px;
+} 
