--- a/styles/work8.css
+++ b/styles/work8.css
@@ -1,5 +1,4 @@
 body {
-  font-family: 'Kumbh Sans', sans-serif;
   margin: 0; 
   top: 0;
   bottom: 0;
@@ -7,11 +6,17 @@ body {
   margin-top: 0;
 }
 
+p, label {
+  font-family: 'Lato', sans-serif;
+}
 
 p {
   line-height: 200%;
-  font-family: 'Lato', sans-serif;
   margin: 0;
+}
+
+.headings-font {
+  font-family: 'Kumbh Sans', sans-serif;
 }
 
 .center-div {
@@ -83,7 +88,7 @@ h1 {
   width: 392px;
 }
 
-.section2 {
+.section-margin {
   margin-top: 150px;
   margin-bottom: 200px;
 }
@@ -97,7 +102,6 @@ h1 {
 
 .col-pad-left {
   padding-left: 80px;
-  
 } 
 
 .col-pad-right {
@@ -106,8 +110,11 @@ h1 {
 
 h3{
   font-size: 48px;
-  width: 65%;
   font-weight: lighter;
+}
+
+.about-us-width {
+  width: 65%;
   margin-top: 15px;
   margin-right: 0;
 }
@@ -134,7 +141,9 @@ h3{
   width: 600px;
 }
 
-
+.ig-feed {
+  text-align: center;
+}
 .ig-pics-row {
   align-items: center;
 }
@@ -142,15 +151,11 @@ h3{
 .ig-pic {
   height: 242px;
   width: 242px;
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 .section-padding-top {
   padding-top: 50px;
-}
-
-.ig-feed {
-  text-align: center;
 }
 
 .quotes {
@@ -159,6 +164,67 @@ h3{
   font-family: 'Kumbh Sans', sans-serif
 }
 
+.question {
+  margin-top: 0;
+}
+
+.box-design {
+  font-family: 'Lato';
+  background-color: #e3e3e3;
+  width: 90%;
+  margin-bottom: 20px;
+  border: none;
+  padding: 16px;
+}
+
+.max-width {
+  max-width: 100%;
+}
+
+.footer-image {
+ height: 400px;
+}
+
+.crop-image {
+  object-fit: cover;
+  height: 100%;
+  width: 100%; 
+  display: block;
+  background-color: transparent;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+.footer {
+  width: 100%;
+}
+.foot-col-small {
+  width: 25%;
+}
+
+.foot-col-large {
+  width: 50%;
+}
+
+.footer-heading-size {
+  font-size: 20px;
+}
+
+.footer-info {
+  font-size: 14px;
+}
+
+.icons-row {
+  margin-top: 100px;
+}
+.icons {
+  height: 20px;
+  margin-right: 20px;
+}
+
+.subscribe {
+  margin-bottom: 50px;
+}
 
 /* main {
   align-items: center;
