--- a/styles/index9.css
+++ b/styles/index9.css
@@ -61,8 +61,16 @@ button {
     margin: 50px;
 }
 
+.navbar {
+    
+   
+}
+
 #menu_shadow {
-    bottom: 1px;
+    /* position: fixed;
+    top: 0;
+    width: 100%; */
+    bottom: 5px;
     box-shadow: 0px 0px 8px 2px ;
     color: rgb(220, 210, 226);
 }
@@ -72,6 +80,7 @@ button {
     width: 1243px;
     color: black;
     padding: 16px 0px 16px 0px;
+    background-color: white;
 }
 
 #logo {
