--- a/styles/index9.css
+++ b/styles/index9.css
@@ -39,7 +39,7 @@ p {
     line-height: 200%;
 }
 
-button {
+/* button {
     color: white;
     background-color: #CCADAD;
     font-size: 14px;
@@ -50,7 +50,7 @@ button {
     padding-right: 50px;
     padding-top: 15px;
     padding-bottom: 15px;
-  }
+  } */
 
 .spacing {
     margin: 130px;
@@ -58,6 +58,19 @@ button {
 
 .spacing-small {
     margin: 50px;
+}
+
+.home-page_button {
+    color: white;
+    background-color: #CCADAD;
+    font-size: 14px;
+    font-weight: 600;
+    border: none;
+    border-radius: 3px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 #menu_shadow {
