--- a/styles/index9.css
+++ b/styles/index9.css
@@ -74,12 +74,13 @@ p {
 }
 
 #menu_shadow {
-    /* position: fixed;
+    position: fixed;
     top: 0;
-    width: 100%; */
-    bottom: 5px;
-    box-shadow: 0px 0px 8px 2px ;
+    width: 100%;
+    box-shadow: 0px 1px 8px 2px;
     color: rgb(220, 210, 226);
+    z-index: 1;
+    background-color: white;
 }
 
 #header {
@@ -87,7 +88,7 @@ p {
     width: 1243px;
     color: black;
     padding: 16px 0px 16px 0px;
-    background-color: white;
+    margin: auto;
 }
 
 #logo {
