changed button appearnace
added transition timing

--- a/styles/index9.css
+++ b/styles/index9.css
@@ -62,7 +62,7 @@ p {
 
 .home-page_button {
     color: white;
-    background-color: #CCADAD;
+    background-color: ##fbfbfb;
     font-size: 14px;
     font-weight: 600;
     border: none;
